--- a/Index.html
+++ b/Index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="inception.css">
-    <title>Inception</title>
+    <link rel="stylesheet" href="index.css">
+    <title>Igintion</title>
 </head>
 <body>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="inception.js"></script>
+    <div id="root"></div>
+    <script type="module" src="./src/App.js"></script>
 </body>
 </html>
